css/styles.css
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  border: 0 none;
  list-style: none outside none;
  margin: 0;
  outline: 0 none;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  padding: 0;
}

.header,
.header-2 {
  background-color: #f72210;
  color: red;
}

.debate-item {
  border-top: 4px solid #f92859;
  padding-top: 10px;
  padding-bottom: 4px;
}

.debate-item2 {
  border-bottom: 4px solid #1c87fb;
  padding-bottom: 12px;
}

h5 a {
  font: bold 20px/26px 'Roboto Condensed', sans-serif;
  line-height: 20px;
  color: black;
  text-decoration: none;
  text-decoration-color: red;
}

.h2 a {
  display: block;
  font-size: 22px;
  line-height: 24px;
  position: relative;
  bottom: 20px;
  text-decoration-color: red;
  color: black;
  font-weight: 700;
}

.category,
.cat a {
  font: bold 16px/26px 'Roboto Condensed', sans-serif;
  color: #f72210;
  text-transform: uppercase;
  margin-top: 10px;
  margin-bottom: 10px;
}

.block-title,
.block-title a {
  font: bold 16px/16px 'Roboto Condensed', sans-serif;
  text-transform: uppercase;
  padding-bottom: 11px;
  color: rgba(3, 3, 3, 0.4);
  width: 100%;
}

.usa a,
.t-badge a,
.c-badge a,
.h-badge a {
  text-transform: uppercase;
  text-decoration: none;
  color: #f72210;
  font-weight: bold;
}

.pandemic-badge a {
  position: absolute;
  bottom: 0;
  text-decoration: none;
  background-color: #c2d4d7;
  text-transform: uppercase;
  font: bold 13px/20px 'Roboto condensed', Arial, sans-serif;
  padding-left: 6px;
  padding-right: 6px;
  color: #333;
}

.h3 a {
  display: block;
  font-size: 16px;

  /* line-height: 21px; */
  text-decoration-color: red;
  color: black;
  font-weight: 700;
}

.c-vs {
  position: relative;
  z-index: 1;
  width: 32px;
  height: 32px;
  background-color: #000;
  color: #d6d6d6;
  border-radius: 50%;
  text-align: center;
  margin: 6px auto;
}

.nav-bar a {
  text-decoration: none;
  color: black;
}

.block-title--1 a {
  font-size: 23px;
  font-weight: bold;
  color: #f61602;
}

.h5 a {
  font-size: 20px;
  color: #000;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: bold;
}

.title a {
  text-decoration: none;
  color: black;
  font-weight: 700;
}

.m-badge a {
  position: absolute;
  bottom: 0;
  text-decoration: none;
  background-color: #c2d4d7;
  text-transform: uppercase;
  font: bold 18px/20px 'Roboto condensed', Arial, sans-serif;
  color: red;
}

.f-badge a {
  position: absolute;
  bottom: 0;
  text-decoration: none;
  background-color: red;
  text-transform: uppercase;
  font: bold 18px/20px 'Roboto condensed', Arial, sans-serif;
  color: white;
}

.menu li a {
  font-size: 14px;
  font-weight: normal;
  color: #666;
}

.related li a {
  text-decoration: none;
  color: black;
  font-size: 13px;
}

.info .title a {
  font: bold 16px/19px 'Roboto Condensed', sans-serif;
  color: rgba(3, 3, 3, 0.5);
}

.h5 a:hover {
  text-decoration: underline #f72210;
}

.title a:hover {
  color: red;
}

.lk {
  display: block;
  background-color: #f4f5f6;
  color: black;
  text-align: center;
  margin-bottom: 0;
  font-size: 18px;
  font-weight: 700;
  font-family: 'Roboto condensed', Arial, sans-serif;
}

.magazine-title,
.c-vs {
  font: bold 19px/19px 'Roboto Condensed', sans-serif;
}

.deco {
  position: relative;
}

.deco::after,
.deco::before {
  content: '';
  display: block;
  background-color: #d9d9d9;
  height: 1px;
  position: absolute;
  left: 0;
  right: 0;
}

.deco::before {
  top: calc(50% - 2px);
}

.by {
  font-weight: normal;
  color: #555;
  font-size: 14px;
}

.byline,
.title {
  font-family: 'Roboto Condensed', sans-serif;
  padding-bottom: -6px;
}

.deco::after {
  top: 50%;
}

.header-3 {
  background: white;
}

.image3 {
  width: 396px;
  height: 60px;
}

.user {
  width: 30px;
  height: 30px;
}

.list {
  width: 25px;
}

.list-m {
  width: 40px;
}

.right {
  width: 100%;
}

.main {
  background-color: white;
  width: 97%;
}

.nav-item {
  margin: 0;
}

.image {
  width: 132px;
}

.photo {
  width: 100%;
}

.editor-pic {
  width: 100%;
  height: 45vh;
}

.card-class {
  width: 100%;
}

.usa {
  width: 58px;
  height: 33px;
  background: #ccc;
  border: 1px #ccc solid;
  text-align: center;
  position: relative;
  bottom: 33px;
}

.nav-bar li {
  list-style: none;
  display: inline-block;
  font-size: 19px;
  line-height: 24px;
  font-weight: bold;
  font-family: 'Roboto Condensed', sans-serif;
}

.nav-bar {
  width: 100%;
}

.top-story-text-1 {
  width: 100%;
  font-size: 13px;
  margin-top: -20px;
}

.top-story-text {
  font-size: 13px;
}

.input {
  width: 100px;
  border: none;
}

.header-3::before {
  position: absolute;
  top: 0;
  right: 0;
  content: '';
  display: block;
  width: 66px;
  background-color: #f72210;
  border-left: 12px solid white;
  border-top: 13px solid #f72210;
}

.picture img {
  width: 100%;
}

.related li {
  list-style: none;
}

.infos p {
  width: 143px;
  font-size: 15px;
  font-weight: normal;
}

.infos {
  height: 100%;
}

.lead {
  font-size: 16px;
  font-weight: normal;
}

.gray {
  background-color: #f4f5f6;
}

.pelcro-subscribe-button {
  position: relative;
  font: bold 18px/18px 'Roboto Condensed', sans-serif;
  cursor: pointer;
  background-color: #f72310;
  color: white;
  text-transform: uppercase;
  display: inline-block;
  padding: 10px 10px 10px 12px;
  border-radius: 3px;
}

.picture {
  position: relative;
}

.free-signup input {
  width: 100%;
}

.photo-1 img {
  width: 90%;
}

.photo-1 {
  width: 100%;
}

.imag img {
  width: 100%;
  margin-left: 16px;
  height: 100%;
}

.block-title1 {
  font: bold 16px/16px 'Roboto Condensed', sans-serif;
  text-transform: uppercase;
  padding-bottom: 11px;
  color: #f72210;
}

.subscribe-block {
  line-height: 28px;
  margin-bottom: 15px;
  font-size: 24px;
  color: black;
  font-weight: bold;
}

.newsletter {
  max-width: 300px;
  margin: 0 auto 30px;
  border: 1px solid #e5e5e5;
  background-color: #f4f5f6;
  padding: 20px;
}

.newsletter-text .text-news {
  width: 100%;
  font-size: 15px;
  font-weight: 800;
  text-transform: uppercase;
}

.signup-form {
  margin-top: 8px;
}

.signup-form input {
  width: 100%;
  height: 32px;
  line-height: 32px;
}

.signup-form .submit-form {
  color: white;
  text-transform: uppercase;
  cursor: pointer;
  font-weight: bold;
  font-size: 0;
  font-family: 'Roboto Condensed', sans-serif;
  background:
    url('../resources/free-sign-up.svg') center/108px no-repeat
    #f61602;
  border-radius: 3px;
}

.bg {
  background-image: url('/resources/starting5-homepage.png');
  background-repeat: no-repeat;
  background-size: 100% 61vh;
}

.con2,
.menu {
  width: 100%;
}

ul {
  margin: 0;
  padding: 0;
}

.footer-links {
  padding-left: 8px;
  border-top: 1px solid #d9d9d9;
  padding-top: 6px;
  font-size: 14px;
  line-height: 15px;
  color: #666;
}

.copyright {
  font-size: 12px;
  line-height: 12px;
  text-transform: uppercase;
  color: #666;
  margin-bottom: 12px;
}

.img-1 img {
  width: 100%;
}

.logo img {
  width: 246px;
}

.headsot img {
  width: 63px;
  height: 63px;
}

.m-item img {
  width: 100%;
  height: 50vh;
}

.us-img img {
  width: 100%;
}

.social-link div img {
  width: 26px;
  height: 24px;
  margin-left: 12px;
}

.text-input {
  color: #555;
  font-size: 14px;
  font-family: 'Helvetica', sans-serif;
  background-color: white;
  border: 1px solid #e0e1e1;
  text-indent: 9px;
}

.c-badge,
.t-badge,
.h-badge {
  background: #ccc;
  border: 1px #ccc solid;
  text-align: center;
  position: relative;
  bottom: 33px;
}

.t-badge {
  width: 60%;
  height: 33px;
}

.h-badge {
  width: 28%;
  height: 33px;
}

.c-badge {
  width: 35%;
  height: 33px;
}

.category span:first-of-type {
  padding: 0 7px;
  background-color: #f72210;
  color: white;
  margin-right: 7px;
}

.icon {
  display: block;
  width: 29px;
  height: 28px;
  background: url('../resources/logo-n1.svg') center/contain no-repeat #f72210;
  margin-right: 10px;
}

.byline-option {
  color: #555;
  text-transform: uppercase;
  margin-top: 4px;
  font: bold 14px/21px 'Roboto Condensed', sans-serif;
}

.h2 {
  width: 100%;
  color: black;
}

.trial-btn {
  font: bold 13px/20px 'Roboto Condensed', sans-serif;
  cursor: pointer;
  text-transform: uppercase;
  display: inline;
  padding-left: 6px;
  padding-right: 6px;
  border-radius: 3px;
  border: none;
  background: #ffe400;
  padding-bottom: 2px;
}

.login {
  color: white;
  background-color: #f72210;
  text-transform: uppercase;
  border: none;
  font-weight: 700;
}

.trial {
  text-transform: uppercase;
  border: none;
  font-weight: 700;
  background: #ffe400;
  border-radius: 3px;
}

.utilities {
  color: white;
}

.cloud {
  width: 24px;
  height: 24px;
}

.location::after {
  content: url('../resources/white-arrow.svg');
  display: inline-block;
  width: 6px;
  height: 11px;
  margin-left: 9px;
}

.trial::after,
.lk::after {
  content: url('../resources/icon-arrow-right.svg');
  display: inline-block;
  width: 6px;
  height: 11px;
  margin-left: 9px;
}

.temp,
.location {
  font-weight: 700;
}

.location {
  font-size: 14px;
}

.navigation {
  width: 100%;
}

.input-search {
  position: relative;
}

.search {
  position: absolute;
  right: 0;
  top: 5px;
  width: 20px;
  height: 20px;
}



/* ================================================================== */

/* custom media queries */

/* ================================================================== */
@media (min-width: 992px) {
  body {
    background-color: #f4f5f6;
  }

  .header-2 {
    padding-top: 20px;
    padding-bottom: 12px;
  }
}

@media (min-width: 1198px) {
  .header-2,
  .header-3 {
    width: 100%;
  }
}

@media (min-width: 1350px) {
  .header-2,
  .header-3 {
    width: 98%;
  }
}

